--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.databaseplatform=org.hibernate.dialect.H2Dialect
+pokeapi.start_offset=0
+pokeapi.limit=200
+pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
