--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.databaseplatform=org.hibernate.dialect.H2Dialect
 pokeapi.start_offset=0
 pokeapi.limit=200
 pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
+paa.paging.url=https://pokemon-academy-api.herokuapp.com/pokemons/list?page=%d&size=%d
