feature(paa): add signup feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ pokeapi.start_offset=0
 pokeapi.limit=200
 pokeapi.url=https://pokeapi.co/api/v2/pokemon?limit=%d&offset=%d
 paa.paging.url=https://pokemon-academy-api.herokuapp.com/pokemons/list?page=%d&size=%d
+paa.security_key=security_key
+paa.authorization_type=Bearer
+paa.authorization_header_name=Authorization
